--- a/src/style.css
+++ b/src/style.css
@@ -70,10 +70,11 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  max-width: 1280px; 
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  width: 80%;
 }
 
 @media (prefers-color-scheme: light) {
